<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/ola_paulo"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/agencia"
        app:layout_constraintStart_toStartOf="@+id/tv_usuario"
        app:layout_constraintTop_toBottomOf="@id/tv_usuario"/>

    <TextView
        android:id="@+id/tv_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/conta"
        app:layout_constraintStart_toEndOf="@+id/tv_agencia"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_agencia"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_update_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_disponível"
                app:layout_constraintTop_toTopOf="@+id/iv_saldo"
                app:layout_constraintLeft_toRightOf="@+id/iv_saldo"
                app:layout_constraintBottom_toBottomOf="@id/iv_saldo"
                android:layout_marginLeft="16dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="16dp" />

            <TextView
                android:id="@+id/tv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
                app:layout_constraintStart_toStartOf="@id/iv_saldo"
                android:text="@string/r_18_000_00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp" />

            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo_limite"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo"
                app:layout_constraintStart_toStartOf="@id/tv_saldo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_limite"
                android:layout_marginLeft="8dp"
                android:text="@string/r_20_000_00" />

            <View
                android:id="@+id/v_linha"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite"/>

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_extrato"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_linha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/redSecundary"
                android:textSize="18dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>